...
    onOrderChange: (NoteOrder) -> Unit
){
    Column(
        modifier = modifier
    ){
        Row (modifier = Modifier.fillMaxWidth()){
            DefaultRadioButton(text = "Title",
                selected = noteOrder is NoteOrder.Title,
                onSelect = { onOrderChange(NoteOrder.Title(noteOrder.orderType)) } )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(text ="Date" ,
                selected =noteOrder is NoteOrder.Date ,
                onSelect = { onOrderChange(NoteOrder.Date(noteOrder.orderType)) } )
...
            modifier = Modifier.fillMaxWidth()
        ){
            DefaultRadioButton(text = "Ascending",
                selected = noteOrder.orderType is OrderType.Ascending,
                onSelect = { onOrderChange(noteOrder.copy(OrderType.Ascending))})
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(text ="Descending" ,
                selected = noteOrder.orderType is OrderType.Descending ,
                onSelect = { onOrderChange(noteOrder.copy(OrderType.Descending))} )
        }

        }

...
